<resources>
    <string name="app_name">CRFPOS</string>
    <string name="adult1">大人1</string>
    <string name="adult2">大人2</string>
    <string name="adult3">大人3</string>
    <string name="adult4">大人4</string>
    <string name="child1">子供1</string>
    <string name="child2">子供2</string>
    <string name="child3">子供3</string>
    <string name="child4">子供4</string>
    <string name="adult">大人</string>
    <string name="child">子供</string>
    <string name="adult_input">大人 入力</string>
    <string name="child_input">子供 入力</string>
    <string name="adult0">大人0</string>
    <string name="child0">子供0</string>
    <string name="back_to_home">ホームに戻る</string>
    <string name="add">add</string>
    <string name="save">完了</string>
    <string name="back">戻る</string>
    <string name="delete">削除</string>
    <string name="refresh">refresh</string>
    <string name="manage_stock">在庫管理</string>
    <string name="manage_records">売上管理</string>
    <string name="manage_sales">販売</string>
    <string name="export">export</string>
    <string name="yen">%d円</string>
    <string name="mai">%d枚</string>
    <string name="input">入力</string>
    <string name="adjust">清算</string>
    <string name="fare">運賃</string>
    <string name="goods_sales">物販</string>
    <string name="toku_toku">特企</string>
    <string name="toku_toku_coupon">回数券</string>
    <string name="select_toku_toku">特企券選択</string>
    <string name="analytics">要約</string>
    <string name="goods_name">商品名</string>
    <string name="price">価格</string>
    <string name="purchase">仕入れ量</string>
    <string name="remain">残</string>
    <string name="manage_goods">商品</string>
    <string name="manage_coupon">特企券類</string>
    <string name="manage_back">戻る</string>
    <string name="time">時間</string>
    <string name="sum">合計</string>
    <string name="sales_and_repay">売上/返金額</string>
    <string name="time_example">20230000 00:00:00</string>
    <string name="datetime">日時</string>
    <string name="person_example">10人</string>
    <string name="sales_example">99999円</string>
    <string name="num_of_things">数量</string>
    <string name="amount">金額</string>
    <string name="unit_price">単価</string>
    <string name="num_of_sales_text">%1$s円</string>
    <string name="sub_total">小計</string>
    <string name="normal_ticket">硬券</string>
    <string name="accompany_ticket">付添券</string>
    <string name="driving_ticket">運転体験券</string>

</resources>
