<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?selectableItemBackground"
    tools:ignore="RtlHardcoded">


    <TextView
        android:id="@+id/time"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:gravity="center|left"
        android:text="@string/datetime"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/adult"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:gravity="center|right"
        android:text="@string/adult"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/time"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/child"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:gravity="center|right"
        android:text="@string/child"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/adult"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/personSum"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:gravity="center|right"
        android:text="@string/sum"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/child"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fareSales"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center|right"
        android:text="@string/fare"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/personSum"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/goodsSales"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center|right"
        android:text="@string/goods_sales"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/fareSales"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/total"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:gravity="center|right"
        android:text="@string/sum"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/goodsSales"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>